--- a/apps/frontend/src/plugins/blog/langs/en.json
+++ b/apps/frontend/src/plugins/blog/langs/en.json
@@ -2,8 +2,7 @@
   "blog": {},
   "admin_blog": {
     "nav": {
-      "title": "Blog",
-      "categories": "Categories"
+      "title": "Blog"
     }
   }
 }
