feat: Add items in nav AdminCP for blog

--- a/apps/frontend/src/plugins/blog/langs/en.json
+++ b/apps/frontend/src/plugins/blog/langs/en.json
@@ -2,7 +2,10 @@
   "blog": {},
   "admin_blog": {
     "nav": {
-      "title": "Blog"
+      "title": "Blog",
+      "settings": "Settings",
+      "categories": "Categories",
+      "articles": "Articles"
     }
   }
 }
