--- a/apps/frontend/src/plugins/admin/langs/en.json
+++ b/apps/frontend/src/plugins/admin/langs/en.json
@@ -8,6 +8,7 @@
       "diagnostic_tools": "Diagnostic Tools",
       "home_page": "Home Page",
       "mobile_not_supported": "Mobile devices are not supported.",
+      "require_email_service": "The email service is disabled.",
       "search": {
         "placeholder": "Search...",
         "no_results": "No results found.",
@@ -58,8 +59,7 @@
         }
       },
       "email": {
-        "hello": "Hello",
-        "footer": "You're receiving this email because your account activity triggered this email. Please do not reply to this email. If you have any questions, please contact us at:"
+        "hello": "Hello"
       },
       "settings": {
         "main": {
@@ -147,17 +147,46 @@
           }
         },
         "authorization": {
-          "force_login": {
-            "title": "Force Login",
-            "desc": "Force users to log in before they can access your website."
+          "title": "Authorization",
+          "desc": "Manage authorization settings for your website.",
+          "settings": {
+            "title": "Settings",
+            "force_login": {
+              "title": "Force Login",
+              "desc": "Force users to log in before they can access your website."
+            },
+            "lock_register": {
+              "title": "Lock Register",
+              "desc": "Don't allow users to register on your website."
+            },
+            "require_confirm_email": {
+              "title": "Require Confirm Email",
+              "desc": "Require users to confirm their email address before they can access your site."
+            }
           },
-          "lock_register": {
-            "title": "Lock Register",
-            "desc": "Don't allow users to register on your website."
-          },
-          "require_confirm_email": {
-            "title": "Require Confirm Email",
-            "desc": "Require users to confirm their email address before they can access your site."
+          "methods": {
+            "title": "Login Methods",
+            "name": "Name",
+            "enabled": "Enabled",
+            "create": {
+              "title": "Create Method",
+              "desc": "New login method for your website.",
+              "provider": "Provider",
+              "client_id": "Client ID",
+              "client_secret": "Client Secret",
+              "success": "Login method has been created.",
+              "your_callback_url": "Your callback URL"
+            },
+            "edit": {
+              "title": "Edit Method",
+              "success": "Login method has been updated."
+            },
+            "delete": {
+              "desc": "This action will delete the login method <name></name>.",
+              "warn": "If you delete this login method, users who use this method to log in will not be able to log in.",
+              "success": "Login method has been deleted.",
+              "submit": "Yes, delete login method"
+            }
           }
         },
         "legal": {
