--- a/apps/frontend/src/plugins/admin/langs/en.json
+++ b/apps/frontend/src/plugins/admin/langs/en.json
@@ -242,12 +242,24 @@
             "prompt_placeholder": "Ask a question...",
             "submit": "Ask"
           }
-        }
-      },
-      "metadata": {
-        "manifest": {
-          "title": "Manifest",
-          "desc": "The web app manifest provides information about an application (such as name, author, icon, and description) in a JSON text file. The manifest is used to install the web application (PWA) to the home screen of a device.",
+        },
+        "metadata": {
+          "title": "Metadata",
+          "desc": "Share your website with the world by adding metadata to your website.",
+          "theme_color": "Theme Color",
+          "background_color": "Background Color",
+          "start_url": {
+            "label": "Start URL",
+            "desc": "When user launches the app, this is the page that will be loaded."
+          },
+          "icon": {
+            "label": "Icon",
+            "desc": "Represent your website on devices (PWA). Recommended size: 512x512px."
+          },
+          "favicon": {
+            "label": "Favicon",
+            "desc": "Icon in browser tab. Recommended size: 32x32px."
+          },
           "display": {
             "label": "Display",
             "desc": "The display property controls how the app is displayed.",
@@ -259,7 +271,7 @@
               "title": "Standalone",
               "desc": "Without any browser UI."
             },
-            "minimal-ui": {
+            "minimal": {
               "title": "Minimal UI",
               "desc": "Minimal browser UI."
             },
@@ -267,16 +279,6 @@
               "title": "Browser",
               "desc": "With browser UI."
             }
-          },
-          "start_url": {
-            "label": "Start URL",
-            "desc": "When user launches the app, this is the page that will be loaded."
-          },
-          "theme_color": {
-            "label": "Theme Color"
-          },
-          "background_color": {
-            "label": "Background Color"
           }
         }
       },
