--- a/apps/frontend/src/plugins/admin/langs/en.json
+++ b/apps/frontend/src/plugins/admin/langs/en.json
@@ -62,12 +62,28 @@
       "diagnostic": {
         "title": "Diagnostic Tools",
         "desc": "Use these tools to diagnose and fix common issues with your website.",
+        "get_support": "Get Support",
         "clear_cache": {
           "title": "Clear Cache",
           "desc": "This action clean up the cache of your website. This can help fix issues with your website but may slow down your website temporarily.",
           "confirm": "Yes, clear cache",
           "success": "Cache has been cleared."
-        }
+        },
+        "captcha": {
+          "title": "Captcha",
+          "desc": "Protect your website from spam."
+        },
+        "email": {
+          "title": "Email",
+          "desc": "Access to send emails."
+        },
+        "ai": {
+          "title": "Artificial Intelligence (AI)",
+          "desc": "Use AI to improve your website."
+        },
+        "enable": "Enable",
+        "disable": "Disable",
+        "how_to_enable": "How to enable?"
       },
       "email": {
         "hello": "Hello"
@@ -141,28 +157,6 @@
             "send_testing_email": "Send Testing Email"
           }
         },
-        "security": {
-          "captcha": {
-            "title": "Captcha",
-            "desc": "Captcha is a security feature that requires users to complete a challenge to prove they are human. This helps prevent spam and abuse.",
-            "type": {
-              "title": "Type",
-              "none": {
-                "title": "None"
-              },
-              "recaptcha_desc": "Read more on <link>Google reCAPTCHA</link>.",
-              "recaptcha_v2_invisible": "reCAPTCHA v2 Invisible",
-              "recaptcha_v2_checkbox": "reCAPTCHA v2 Checkbox",
-              "recaptcha_v3": "reCAPTCHA v3",
-              "cloudflare_turnstile": {
-                "title": "Cloudflare Turnstile",
-                "desc": "Read more on <link>Cloudflare Turnstile</link>."
-              }
-            },
-            "site_key": "Site Key",
-            "secret_key": "Secret Key"
-          }
-        },
         "authorization": {
           "title": "Authorization",
           "desc": "Manage authorization settings for your website.",
@@ -207,7 +201,7 @@
           }
         },
         "legal": {
-          "title": "Legal & Policies",
+          "title": "Legal",
           "desc": "These settings are used to generate the legal pages on your website.",
           "legal_public": "Public Legal",
           "created": "Created",
@@ -507,6 +501,7 @@
       },
       "langs": {
         "title": "Languages",
+        "desc": "Manage languages on your website.",
         "search_placeholder": "Search by name...",
         "table": {
           "key": "Key",
@@ -516,6 +511,21 @@
           "enabled": "Enabled"
         },
         "actions": {
+          "translate-ai": {
+            "title": "Translate with AI",
+            "desc": "Choose which plugins you want to translate for <lang></lang> language.",
+            "all_plugins": {
+              "label": "All Plugins",
+              "desc": "This process may take a little longer."
+            },
+            "admin": "Admin",
+            "plugins": {
+              "label": "Plugins",
+              "desc": "Select specific plugins to translate."
+            },
+            "submit": "Translate",
+            "success": "The language has been translated."
+          },
           "create": {
             "title": "Create Language",
             "name": {
@@ -567,30 +577,6 @@
             "uses_warning": "This file is used in other part of the system.",
             "success": "File has been deleted.",
             "submit": "Yes, delete file"
-          }
-        }
-      },
-      "security": {
-        "spam": {
-          "title": "Spam Protection",
-          "captcha": {
-            "title": "Captcha",
-            "type": {
-              "title": "Type",
-              "none": {
-                "title": "None"
-              },
-              "recaptcha_desc": "Read more on <link>Google reCAPTCHA</link>.",
-              "recaptcha_v2_invisible": "reCAPTCHA v2 Invisible",
-              "recaptcha_v2_checkbox": "reCAPTCHA v2 Checkbox",
-              "recaptcha_v3": "reCAPTCHA v3",
-              "cloudflare_turnstile": {
-                "title": "Cloudflare Turnstile",
-                "desc": "Read more on <link>Cloudflare Turnstile</link>."
-              }
-            },
-            "site_key": "Site Key",
-            "secret_key": "Secret Key"
           }
         }
       }
