--- a/apps/frontend/src/plugins/blog/langs/en.json
+++ b/apps/frontend/src/plugins/blog/langs/en.json
@@ -2,6 +2,7 @@
   "blog": {
     "title": "Blog",
     "desc": "Read the latest articles.",
+    "no_articles": "No articles found.",
     "authors_count": "+{count, plural, other {# authors}}"
   },
   "admin_blog": {
@@ -18,6 +19,7 @@
       "published_at": "Published At",
       "draft": "Draft",
       "edited_at": "Edited At",
+      "open_article": "Open Article",
       "create": {
         "title": "Create Article",
         "desc": "Write a new article.",
